--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,6 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = "1.3.61"
     repositories {
         google()
         jcenter()
@@ -10,11 +9,9 @@ buildscript {
         // The AGP were moved into the buildSrc/build.gradle.kts file
         // classpath "com.android.tools.build:gradle:3.4.2"
         classpath "com.vanniktech:gradle-android-junit-jacoco-plugin:0.12.0"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.72"
     }
 }
-
-apply plugin: 'com.vanniktech.android.junit.jacoco'
 
 allprojects {
     repositories {
