--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -35,5 +35,5 @@ dependencies {
     implementation project(':thirtyinch-logginginterceptor')
 
     testImplementation "junit:junit:$junitVersion"
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.3.72"
 }
