--- a/thirtyinch-kotlin-coroutines/build.gradle
+++ b/thirtyinch-kotlin-coroutines/build.gradle
@@ -26,7 +26,7 @@ android {
 
 dependencies {
     api project(":thirtyinch-kotlin")
-    api("org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version")
+    api("org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.3.72")
     api("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.2.2")
 
     testImplementation "junit:junit:$junitVersion"
