--- a/thirtyinch-kotlin/build.gradle
+++ b/thirtyinch-kotlin/build.gradle
@@ -25,7 +25,7 @@ android {
 
 dependencies {
     api project(":thirtyinch")
-    api("org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version")
+    api("org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.3.72")
 
     testImplementation "junit:junit:$junitVersion"
     testImplementation "com.nhaarman:mockito-kotlin:$mockitoKotlinVersion"
